# Sliding_Tiling_Divergence

./: .gitignore  AGENTS.md  EXAMPLES.md  QUICK_REFERENCE.md  README.md  TODO.md  analysis_runner.py  analyze_experiment.py  environment.yaml  playground.ipynb  pyproject.toml  summarise_all_exp_stats_to_csv.py  test.ipynb
agents_artifacts/: FRC_metric.md  IMPLEMENTATION.md  null_calibration.md  per_tile_metric_design.md  references.md  sliding_window_artifact_attenuation.md
hpc/: run_frc_analysis.sbatch  run_gradient_test.sbatch
scripts/: flateness_gradient_test_analyses.py  run_anisotropy_diagnostic.py  run_frc_analysis_on_dataset.py  run_gradient_test_on_dataset.py
src/analysis_pipeline/: __init__.py
src/analysis_pipeline/cli/: __init__.py  analyze.py  analyze_multi.py  calibrate.py  frc_analyze.py  frc_analyze_multi.py
src/analysis_pipeline/config/: __init__.py  analysis.py  frc.py  gradient.py  settings.py
src/analysis_pipeline/core/: __init__.py  aggregation.py  analysis.py  calibration.py  diagnostics.py  gradient_analysis.py  metrics.py  per_tile.py  permutation.py  plotting.py  sampling.py  seams.py  statistics.py  tiles.py
src/analysis_pipeline/frc/: __init__.py  aggregation.py  analysis.py  comparison.py  frc.py  plotting.py  reduction.py
src/analysis_pipeline/gradient_test/: __init__.py  aggregation.py  analysis.py  calibration.py  comparison.py  gradient_analysis.py  per_axis.py  per_tile.py  permutation.py  plotting.py  sampling.py  seams.py  statistics.py
src/analysis_pipeline/legacy/: __init__.py  metrics.py  plotting.py
src/analysis_pipeline/utils/: __init__.py  array_utils.py  file_utils.py
src/tilartmetrics/cli/: __init__.py  analyze.py  calibrate.py  frc.py  frc_analyze.py  frc_analyze_multi.py  gradient_test.py
src/tilartmetrics/config/: __init__.py  gradient.py
src/tilartmetrics/frc/: __init__.py  aggregation.py  analysis.py  frc.py  fsc.py  plotting.py  windowing.py
src/tilartmetrics/gradient_test/: __init__.py  aggregation.py  analysis.py  calibration.py  gradient_analysis.py  per_axis.py  per_tile.py  permutation.py  plotting.py  sampling.py  tiles.py
src/tilartmetrics/utils/: __init__.py  array_utils.py  file_utils.py
tests/: test_artifact_injection.py  test_calibration.py  test_frc.py  test_geometry.py  test_null_calibration.py  test_per_axis.py  test_z_score.py
utils/: analysis_utils.py  common_grad_utils.py  gradient_utils.py  plot_utils.py
