[project]
name = "tilartmetrics"
version = "0.2.0"
description = "Gradient-based metrics for detecting tiling artifacts in image predictions"
requires-python = ">=3.10"
authors = [
    {name = "Analysis Team"}
]
readme = "README.md"

dependencies = [
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pillow>=9.4.0",
    "pyyaml>=6.0",
    "opencv-python>=4.7.0",
    "seaborn>=0.12.0",
    "tifffile>=2023.3.15",
    "typer>=0.9.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=23.1.0",
    "ruff>=0.0.254",
    "mypy>=1.0.0",
]

[project.scripts]
analyze-experiment = "tilartmetrics.cli.analyze:main"
calibrate-block-size = "tilartmetrics.cli.calibrate:main"
frc-experiment = "tilartmetrics.cli.frc_analyze:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tilartmetrics"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

